--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,9 +19,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install Packages
       run: npm install
-    - name: Deploy to GH Pages
+    - name: Deploy
       run:
-        git config --global user.email ${{secrets.EMAIL}}
-        git config --global user.name ${{secrets.USERNAME}}
-        git remote set-url origin https://${{secrets.TOKEN}}@github.com/${{secrets.USERNAME}}/react-actions.git
         npm run deploy
