--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,5 +17,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install Packages
+    - name: Install dependencies
       run: npm install
+
+    - name: Run the tests
+      run: npm test
+
+    - name: Build
+      run: npm run build
